--- a/translations/ResetPasswordBundle.fr.yaml
+++ b/translations/ResetPasswordBundle.fr.yaml
@@ -1,7 +1,27 @@
+# reset_password:
+#   check_email_title: E-mail envoyé !
+#   check_email_message: >
+#     Si un compte correspond à votre adresse e-mail, un lien de réinitialisation a été envoyé. Ce lien expirera dans %time%.
+#   check_email_retry: >
+#     Si vous ne recevez pas l’e-mail, vérifiez votre dossier spam ou %link%.
+#   try_again: réessayez
+
+
 reset_password:
-  check_email_title: E-mail envoyé !
-  check_email_message: >
-    Si un compte correspond à votre adresse e-mail, un lien de réinitialisation a été envoyé. Ce lien expirera dans %time%.
-  check_email_retry: >
-    Si vous ne recevez pas l’e-mail, vérifiez votre dossier spam ou %link%.
-  try_again: réessayez
+  check_email:
+    message: >
+      Si un compte correspondant à votre adresse e-mail existe, un e-mail a été envoyé avec un lien pour réinitialiser votre mot de passe.
+      Ce lien expirera dans %time%.
+    expiration_message_key: dans %expiration%
+    expiration_message_data:
+      expiration: 1h
+    title: "E-mail envoyé !"
+    retry: >
+      Si vous ne recevez pas l'e-mail, vérifiez votre boîte de spam ou %link%.
+    try_again: "essayez à nouveau"
+
+request_title: Réinitialiser votre mot de passe
+request_heading: Vous avez oublié votre mot de passe ?
+request_instruction: Saisissez votre adresse e-mail et nous vous enverrons un lien pour réinitialiser votre mot de passe.
+email_placeholder: Entrez votre adresse e-mail
+request_submit: Envoyer l'e-mail de réinitialisation
