Mise à jour du controlleur contract

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -5,7 +5,7 @@ photos: "Photo Gallery"
 my_space: "My Space"
 profile_h: "Profile"
 orders: "Orders"
-basket: "Basket"
+basket_h: "Basket"
 logout: "Logout"
 register_h: "Register"
 # login: "Login"
@@ -702,5 +702,61 @@ profile.admin_message: "Administrator Message"
 profile.submission_date: "Submission Date"
 
 shop:
+  not_found: "Shop not found."
   view_products_from_shop: "View shop products"
 
+merchant:
+  updated_success: "Données mises à jour avec succès !"
+  already_exists: "Vous avez déjà une demande de boutique enregistrée."
+  missing_fields: "Tous les champs obligatoires doivent être remplis."
+  invalid_file: "Le fichier doit être au format PDF, JPG, JPEG ou PNG."
+  registered_success: "Votre demande de création de boutique a été enregistrée avec succès."
+  contract_subject: "📄 Votre contrat de partenariat avec FalkonANK"
+  contract_body: "Bonjour %userName%,\n\nVeuillez trouver ci-joint votre contrat de partenariat avec FalkonANK.\n\nCordialement,\nÉquipe FalkonANK"
+  not_found: "No merchant found."
+
+basket:
+  invalid_csrf: "Invalid CSRF token."
+  product_not_found: "Product not found."
+  user_not_authenticated: "User not authenticated."
+  empty: "Your basket is empty!"
+  no_products_yet: "You don't have any items yet, add a product to your basket!"
+  product_removed: "Product removed."
+  quantity_updated: "Quantity updated."
+
+cadre_photo:
+  title: "Our Digital Frames"
+
+category:
+  no_products: "No product found for category '%category%'."
+
+
+contract:
+  greeting: "Hello <strong>%name%</strong>,"
+  introduction: "Thank you for choosing to join our network of business partners. We are delighted to collaborate with you."
+  number: "Contract number"
+  date: "Signing date"
+  details_title: "Contract details"
+  platform: "The platform"
+  merchant: "Merchant"
+  nif: "Tax ID"
+  address: "Business address"
+  city: "City"
+  email: "Contact email"
+  clauses_title: "Contract clauses"
+  clause_1: "This contract defines the terms of the partnership for selling and delivering products via the FalkonANK Alimentason platform."
+  clause_2: "The platform promotes products, processes payments, and provides customer support."
+  clause_3: "The merchant guarantees the quality, availability, and delivery of products."
+  clause_4_title: "Pricing and payments"
+  clause_4_1: "The merchant sets the base price excluding commissions."
+  clause_4_2: "The platform adds commission and Stripe fees."
+  clause_4_3: "Payments are made within 7 to 10 business days after delivery."
+  clause_4_4: "International bank transfer fees will be deducted."
+  clause_5: "The contract is concluded for an indefinite period with 15 days’ notice."
+  clause_6: "The merchant is responsible for the delivered products."
+  clause_7: "Both parties agree to comply with GDPR."
+  clause_8: "Any dispute shall fall under the jurisdiction of the courts of Praia, Cape Verde."
+  signature_title: "Signature"
+  merchant_name: "Merchant name"
+  signed_in: "Signed in"
+  closing: "Kind regards,"
