--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -5,7 +5,7 @@ photos: "Galería de Fotos"
 my_space: "Mi espacio"
 profile_h: "Perfil"
 orders: "Pedidos"
-basket: "Cesta"
+basket_h: "Cesta"
 logout: "Cerrar sesión"
 register_h: "Registrarse"
 # login: "Iniciar sesión"
@@ -705,5 +705,61 @@ profile.admin_message: "Mensaje del administrador"
 profile.submission_date: "Fecha de envío"
 
 shop:
+  not_found: "Tienda no encontrada."
   view_products_from_shop: "Ver los productos de la tienda"
 
+merchant:
+  updated_success: "Datos actualizados correctamente."
+  already_exists: "Ya tiene una solicitud de tienda registrada."
+  missing_fields: "Todos los campos obligatorios deben ser completados."
+  invalid_file: "El archivo debe estar en formato PDF, JPG, JPEG o PNG."
+  registered_success: "Su solicitud de creación de tienda se ha registrado correctamente."
+  contract_subject: "📄 Su contrato de colaboración con FalkonANK"
+  contract_body: "Hola %userName%,\n\nAdjunto encontrará su contrato de colaboración con FalkonANK.\n\nAtentamente,\nEquipo FalkonANK"
+  not_found: "No se encontró ningún comerciante."
+
+basket:
+  invalid_csrf: "Token CSRF inválido."
+  product_not_found: "Producto no encontrado."
+  user_not_authenticated: "Usuario no autenticado."
+  empty: "¡Tu carrito está vacío!"
+  no_products_yet: "¡Aún no tienes artículos, añade un producto al carrito!"
+  product_removed: "Producto eliminado."
+  quantity_updated: "Cantidad actualizada."
+
+cadre_photo:
+  title: "Nuestros Marcos Digitales"
+
+category:
+  no_products: "No se encontraron productos para la categoría '%category%'."
+
+
+contract:
+  greeting: "Hola <strong>%name%</strong>,"
+  introduction: "Gracias por unirse a nuestra red de socios comerciales. Estamos encantados de colaborar con usted."
+  number: "Número de contrato"
+  date: "Fecha de firma"
+  details_title: "Detalles del contrato"
+  platform: "La plataforma"
+  merchant: "Comerciante"
+  nif: "NIF"
+  address: "Dirección del establecimiento"
+  city: "Ciudad"
+  email: "Correo electrónico de contacto"
+  clauses_title: "Cláusulas del contrato"
+  clause_1: "Este contrato establece las condiciones de la asociación para la venta y entrega de productos a través de la plataforma FalkonANK Alimentason."
+  clause_2: "La plataforma promociona los productos, procesa los pagos y ofrece soporte al cliente."
+  clause_3: "El comerciante garantiza la calidad, disponibilidad y entrega de los productos."
+  clause_4_title: "Precios y pagos"
+  clause_4_1: "El comerciante fija el precio base sin comisiones."
+  clause_4_2: "La plataforma añade la comisión y las tarifas de Stripe."
+  clause_4_3: "Los pagos se realizan entre 7 y 10 días hábiles después de la entrega."
+  clause_4_4: "Los costos de transferencia bancaria internacional serán deducidos."
+  clause_5: "El contrato se celebra por tiempo indefinido con un preaviso de 15 días."
+  clause_6: "El comerciante es responsable de los productos entregados."
+  clause_7: "Ambas partes deben cumplir con el RGPD."
+  clause_8: "Para la resolución de conflictos, el tribunal competente será el de Praia, Cabo Verde."
+  signature_title: "Firma"
+  merchant_name: "Nombre del comerciante"
+  signed_in: "Firmado en"
+  closing: "Atentamente,"
