--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -5,7 +5,7 @@ photos: "Galerie Photos"
 my_space: "Mon espace"
 profile_h: "Profil"
 orders: "Commandes"
-basket: "Panier"
+basket_h: "Panier"
 logout: "Déconnexion"
 register_h: "Créer un compte"
 # login: "Connexion"
@@ -706,5 +706,61 @@ profile.admin_message: "Message de l’administrateur"
 profile.submission_date: "Date de soumission"
 
 shop:
+  not_found: "Boutique non trouvée."
   view_products_from_shop: "Voir les produits de la boutique"
 
+merchant:
+  updated_success: "Données mises à jour avec succès !"
+  already_exists: "Vous avez déjà une demande de boutique enregistrée."
+  missing_fields: "Tous les champs obligatoires doivent être remplis."
+  invalid_file: "Le fichier doit être au format PDF, JPG, JPEG ou PNG."
+  registered_success: "Votre demande de création de boutique a été enregistrée avec succès."
+  contract_subject: "📄 Votre contrat de partenariat avec FalkonANK"
+  contract_body: "Bonjour %userName%,\n\nVeuillez trouver ci-joint votre contrat de partenariat avec FalkonANK.\n\nCordialement,\nÉquipe FalkonANK"
+  not_found: "Aucun marchand trouvé."
+
+basket:
+  invalid_csrf: "Token CSRF invalide."
+  product_not_found: "Produit non trouvé."
+  user_not_authenticated: "Utilisateur non connecté."
+  empty: "Votre panier est vide !"
+  no_products_yet: "Vous n'avez pas encore d'articles, ajoutez un produit au panier !"
+  product_removed: "Produit supprimé."
+  quantity_updated: "Quantité mise à jour."
+
+cadre_photo:
+  title: "Nos Cadres Numériques"
+
+category:
+  no_products: "Aucun produit trouvé pour la catégorie '%category%'."
+
+
+contract:
+  greeting: "Bonjour <strong>%name%</strong>,"
+  introduction: "Merci d’avoir choisi de rejoindre notre réseau de partenaires commerciaux. Nous sommes ravis de cette collaboration."
+  number: "Numéro du contrat"
+  date: "Date de signature"
+  details_title: "Détails du contrat"
+  platform: "La plateforme"
+  merchant: "Commerçant"
+  nif: "NIF"
+  address: "Adresse de l’établissement"
+  city: "Ville"
+  email: "E-mail de contact"
+  clauses_title: "Clauses du contrat"
+  clause_1: "Ce contrat définit les conditions du partenariat pour la vente et la livraison de produits via la plateforme FalkonANK Alimentason."
+  clause_2: "La plateforme assure la promotion des produits, le traitement des paiements et le support client."
+  clause_3: "Le commerçant garantit la qualité, la disponibilité et la livraison des produits."
+  clause_4_title: "Prix et paiements"
+  clause_4_1: "Le commerçant fixe le prix de base hors commissions."
+  clause_4_2: "La plateforme ajoute la commission et les frais Stripe."
+  clause_4_3: "Les paiements sont effectués entre 7 et 10 jours ouvrables après la livraison."
+  clause_4_4: "Les frais de virement bancaire international sont déduits."
+  clause_5: "Le contrat est conclu pour une durée indéterminée avec un préavis de 15 jours."
+  clause_6: "Le commerçant est responsable des produits livrés."
+  clause_7: "Les deux parties s’engagent à respecter le RGPD."
+  clause_8: "En cas de litige, le tribunal compétent est celui de Praia, Cap-Vert."
+  signature_title: "Signature"
+  merchant_name: "Nom du commerçant"
+  signed_in: "Signé à"
+  closing: "Cordialement,"
