--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -5,7 +5,7 @@ photos: "Quadro de fotos"
 my_space: "Meu espaço"
 profile_h: "Perfil"
 orders: "Compras"
-basket: "Cesta"
+basket_h: "Cesta"
 logout: "Sair"
 register_h: "Criar conta"
 # login: "Login"
@@ -692,4 +692,61 @@ profile.admin_message: "Mensagem do administrador"
 profile.submission_date: "Data de envio"
 
 shop:
+  not_found: "Loja não encontrada."
   view_products_from_shop: "Ver produtos da loja"
+
+merchant:
+  updated_success: "Dados atualizados com sucesso!"
+  already_exists: "Você já tem uma solicitação de loja registrada."
+  missing_fields: "Todos os campos obrigatórios devem ser preenchidos."
+  invalid_file: "O ficheiro deve estar no formato PDF, JPG, JPEG ou PNG."
+  registered_success: "Sua solicitação de criação de loja foi registrada com sucesso."
+  contract_subject: "📄 Seu contrato de parceria com a FalkonANK"
+  contract_body: "Olá %userName%,\n\nSegue em anexo o seu contrato de parceria com a FalkonANK.\n\nAtenciosamente,\nEquipe FalkonANK"
+  not_found: "Nenhum comerciante encontrado."
+
+basket:
+  invalid_csrf: "Token CSRF inválido."
+  product_not_found: "Produto não encontrado."
+  user_not_authenticated: "Usuário não autenticado."
+  empty: "O seu carrinho está vazio!"
+  no_products_yet: "Você ainda não tem artigos, adicione um produto ao carrinho!"
+  product_removed: "Produto removido."
+  quantity_updated: "Quantidade atualizada."
+
+cadre_photo:
+  title: "Os Nossos Quadros Digitais"
+
+category:
+  no_products: "Nenhum produto encontrado para a categoria '%category%'."
+
+
+contract:
+  greeting: "Olá <strong>%name%</strong>,"
+  introduction: "Obrigado por escolher fazer parte da nossa rede de parceiros comerciais. Estamos entusiasmados com a sua colaboração."
+  number: "Número do Contrato"
+  date: "Data de Assinatura"
+  details_title: "Detalhes do Contrato"
+  platform: "A Plataforma"
+  merchant: "Comerciante"
+  nif: "NIF"
+  address: "Morada do Estabelecimento"
+  city: "Cidade"
+  email: "E-mail de Contacto"
+  clauses_title: "Cláusulas do Contrato"
+  clause_1: "Este contrato estabelece os termos da parceria para venda e entrega de produtos através da plataforma FalkonANK Alimentason."
+  clause_2: "Divulgar produtos, processar pagamentos e fornecer suporte ao cliente."
+  clause_3: "Garantir a qualidade e disponibilidade dos produtos."
+  clause_4_title: "Preços e Pagamentos"
+  clause_4_1: "O Comerciante define o preço base."
+  clause_4_2: "A Plataforma adiciona comissão + taxas Stripe."
+  clause_4_3: "Pagamentos entre 7 a 10 dias úteis."
+  clause_4_4: "Custos bancários internacionais serão deduzidos."
+  clause_5: "Contrato por tempo indeterminado."
+  clause_6: "Responsabilidade do comerciante."
+  clause_7: "Cumprimento do RGPD."
+  clause_8: "Foro da Comarca de Praia, Cabo Verde."
+  signature_title: "Assinatura"
+  merchant_name: "Nome do Comerciante"
+  signed_in: "Assinado em"
+  closing: "Atenciosamente,"
